style: temp fix to overflowing text

--- a/yoshi-react/src/components/posts/post.css
+++ b/yoshi-react/src/components/posts/post.css
@@ -77,3 +77,6 @@ Foundation; All Rights Reserved
     margin-top: 2em;
     margin-left: 45em;
 } */
+.post-content{
+    overflow: hidden;
+}
